--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -10,7 +10,20 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.84"
 js-sys = "0.3.60"
+wasm-bindgen-futures = "0.4.39"
 
 [dependencies.web-sys]
 version = "0.3.6"
-features = ["Window", "console", "Document","Element"]
+features = [
+    "Window", 
+    "console", 
+    "Document", 
+    "Element", 
+    "HtmlElement",
+    "Node",
+    "Headers",
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response",
+    ]
