--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -11,6 +11,8 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2.84"
 js-sys = "0.3.60"
 wasm-bindgen-futures = "0.4.39"
+tonic = "0.10.2"
+prost = "0.12.3"
 
 [dependencies.web-sys]
 version = "0.3.6"
@@ -27,3 +29,6 @@ features = [
     "RequestMode",
     "Response",
     ]
+
+[build-dependencies]
+tonic-build = "0.10.2"
