--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "protobufjs": "^7.2.5",
     "vite": "^5.0.10"
   },
   "devDependencies": {
