--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "col-ii",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/main.js",
   "license": "unencumbered",
   "scripts": {
     "dev": "vite",
