--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -16,6 +16,8 @@ serde-wasm-bindgen = "0.6.3"
 serde = "1.0.193"
 
 
+[dev-dependencies]
+mockall = "0.12.1"
 
 [dependencies.web-sys]
 version = "0.3.6"
@@ -31,4 +33,6 @@ features = [
     "RequestInit",
     "RequestMode",
     "Response",
+    "Node",
+    "HtmlCanvasElement",
     ]
