--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "col-ii",
   "version": "1.0.0",
   "main": "./src/main.js",
-  "license": "unencumbered",
+  "license": "Unlicense",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
